--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@types/node": "12.0.2",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@types/react-transition-group": "^2.9.1",
     "@types/redux": "^3.6.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.1.0",
     "redux": "^4.0.1",
     "typescript": "3.4.5"
   },
